---------------------------------------------------------------------------------------------------
Version: 0.69.18
Date: ????
  Changes:
    - Rubia science is again added automatically to infinite research prod (unless you toggle it off in the mod settings).
---------------------------------------------------------------------------------------------------
Version: 0.69.17
Date: 2025-05-22
  Changes:
    - Added support for inserters with hard-coded unique angles!
    - Added credits to the readme as well.
    - Holmium string fix.
    - Added space view of Rubia to readme.
---------------------------------------------------------------------------------------------------
Version: 0.69.16
Date: 2025-05-20
  Changes:
    - Fixed turbine description.
    - Improved compatibility with Bob's inserters
    - Prepared rocket silos for the next factorio base update.
    - Banned linked chests/belts
    - Added car prototype compatibility.
---------------------------------------------------------------------------------------------------
Version: 0.69.15
Date: 2025-05-19
  Changes:
    - Tech hiding is now implemented in a safe way. It doesn't hide all the techs I want to hide, but it at least handles them properly... for now.
---------------------------------------------------------------------------------------------------
Version: 0.69.14
Date: 2025-05-17
  Balancing:
    - Added intermediate trigger tech to try to teach crapapult better.
    - Returned some recipe costs for rubia-specific things.
    - Rebalanced vanilla locomotive cost.
    - Increased armored locomotive fuel cost.
  Changes:
    - Tech hiding is currently not working, and I think needs a bugfix from Wube. While that is being taken care of, I modified the code to make the mod at least playable, albeit cluttered. Sorry!
    - Added hints to lore.
    - Added new optional recipe.
---------------------------------------------------------------------------------------------------
Version: 0.69.13